--- a/resume.template
+++ b/resume.template
@@ -358,7 +358,7 @@
                 {{#each resume.skills}}
                   <li class="detail-item row">
                     <div class="col-xs-12 detail-item-content">
-                      <h4>{{name}}</h4>
+                      <h4>{{name}} {{#if level}}<span class="text-muted">— <em>{{level}}</em></span>{{/if}}</h4>
 
                       {{#if keywords}}
                         <ul class="list-inline labels">
