Download button is now displayed only when the page is served by a web server

--- a/resume.template
+++ b/resume.template
@@ -104,7 +104,7 @@
                 </li>
               {{/if}}
 
-                <li class="basics-item hidden-print">
+                <li class="basics-item hidden-print js-download-trigger">
                   <a id="js-download" href="#download">
                     <span class="icon text-muted"><i aria-hidden="true" class="icon-lg icon-download"></i></span>
                     <span class="info">Download this resume</span>
