--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "autoprefixer-core": "^4.0.2",
     "browser-saveas": "^1.0.0",
     "csso": "^1.3.11",
-    "domready": "^1.0.7",
     "handlebars": "^2.0.0",
     "moment": "^2.8.4",
     "smooth-scroll": "git://github.com/cferdinandi/smooth-scroll",
@@ -35,16 +34,14 @@
   "devDependencies": {
     "browser-sync": "^1.8.2",
     "jshint": "^2.5.6",
-    "jshint-stylish": "^1.0.0",
     "nodemon": "^1.2.1",
-    "resume-cli": "^0.3.11",
     "resume-schema": "0.0.15",
     "webfont-dl": "^0.1.1"
   },
   "scripts": {
     "start": "nodemon server.js -w lib -w assets -e js,css",
     "test": "echo 'not implemented yet' && exit 0",
-    "lint": "jshint --reporter node_modules/jshint-stylish/stylish.js index.js server.js lib/*.js",
+    "lint": "jshint index.js server.js lib/*.js",
     "webfont": "webfont-dl 'https://fonts.googleapis.com/css?family=Open+Sans:400' -o assets/styles/opensans.css --woff1=data --woff2=omit --svg=omit --ttf=omit --eot=omit"
   }
 }
