Add durations for education items

--- a/resume.template
+++ b/resume.template
@@ -311,6 +311,7 @@
                             {{else}}
                               <time>Present</time>
                             {{/if}}
+                            &nbsp;<span><i aria-hidden="true" class="icon-clock-o"></i>&nbsp;{{humaneDuration startDate endDate}}</span>
                           </small>
                         </p>
                       {{/if}}
@@ -343,6 +344,9 @@
                           {{else}}
                             <time>Present</time>
                           {{/if}}
+                        </p>
+                        <p>
+                          <i aria-hidden="true" class="icon-clock-o icon-left"></i>&nbsp;{{humaneDuration startDate endDate}}
                         </p>
                       </div>
                     {{/if}}
