Fix duration wrapping on smaller devices

--- a/resume.template
+++ b/resume.template
@@ -178,7 +178,7 @@
                             {{else}}
                               <time>Present</time>
                             {{/if}}
-                            &nbsp;<span><i aria-hidden="true" class="icon-clock-o"></i>&nbsp;{{humaneDuration startDate endDate}}</span>
+                            &nbsp;<span class="duration-counter"><i aria-hidden="true" class="icon-clock-o"></i>&nbsp;{{humaneDuration startDate endDate}}</span>
                           </small>
                         </p>
                       {{/if}}
@@ -246,7 +246,7 @@
                             {{else}}
                               <time>Present</time>
                             {{/if}}
-                            &nbsp;<span><i aria-hidden="true" class="icon-clock-o"></i>&nbsp;{{humaneDuration startDate endDate}}</span>
+                            &nbsp;<span class="duration-counter"><i aria-hidden="true" class="icon-clock-o"></i>&nbsp;{{humaneDuration startDate endDate}}</span>
                           </small>
                         </p>
                       {{/if}}
@@ -311,7 +311,7 @@
                             {{else}}
                               <time>Present</time>
                             {{/if}}
-                            &nbsp;<span><i aria-hidden="true" class="icon-clock-o"></i>&nbsp;{{humaneDuration startDate endDate}}</span>
+                            &nbsp;<span class="duration-counter"><i aria-hidden="true" class="icon-clock-o"></i>&nbsp;{{humaneDuration startDate endDate}}</span>
                           </small>
                         </p>
                       {{/if}}
